src/parser.output
Terminals unused in grammar

   T_NUMBER
   OP_LT
   OP_GT
   HASHTAG
   DOUBLE_HASHTAG


State 332 conflicts: 1 shift/reduce


Grammar

    0 $accept: root $end

    1 root: translation_unit

    2 enumeration_constant: IDENTIFIER

    3 primary_expression: IDENTIFIER
    4                   | CONSTANT
    5                   | STRING_LITERAL
    6                   | PUN_L_BRACKET expression PUN_R_BRACKET

    7 postfix_expression: primary_expression
    8                   | postfix_expression PUN_SL_BRACKET expression PUN_SR_BRACKET
    9                   | postfix_expression PUN_L_BRACKET PUN_R_BRACKET
   10                   | postfix_expression PUN_L_BRACKET argument_expression_list PUN_R_BRACKET
   11                   | postfix_expression OP_DOT IDENTIFIER
   12                   | postfix_expression OP_POINTER IDENTIFIER
   13                   | postfix_expression OP_INCREM
   14                   | postfix_expression OP_DECREM

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list PUN_COMMA assignment_expression

   17 unary_expression: postfix_expression
   18                 | OP_INCREM unary_expression
   19                 | OP_DECREM unary_expression
   20                 | unary_operator cast_expression
   21                 | KEYW_SIZEOF unary_expression
   22                 | KEYW_SIZEOF PUN_L_BRACKET type_name PUN_R_BRACKET

   23 unary_operator: OP_AND
   24               | OP_ASTERISK
   25               | OP_PLUS
   26               | OP_MINUS
   27               | OP_DESTRUCTOR
   28               | OP_NOT

   29 cast_expression: unary_expression
   30                | PUN_L_BRACKET type_name PUN_R_BRACKET cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression OP_ASTERISK cast_expression
   33                          | multiplicative_expression OP_DIV cast_expression
   34                          | multiplicative_expression OP_REMAINDER cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression OP_PLUS multiplicative_expression
   37                    | additive_expression OP_MINUS multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression OP_LEFT_SHIFT additive_expression
   40                 | shift_expression OP_RIGHT_SHIFT additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression OP_LT_EQ shift_expression
   45                      | relational_expression OP_GT_EQ shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression OP_EQ_CONST relational_expression
   48                    | equality_expression OP_NE_CONST relational_expression

   49 and_expression: equality_expression
   50               | and_expression OP_AND equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression OP_EXP and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression OP_OR exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression OP_ANDAND inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OP_OROR logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression OP_CONDITIONAL expression PUN_COLON conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: PUN_EQUALS
   64                    | OP_MUL_ASSIGN
   65                    | OP_DIV_ASSIGN
   66                    | OP_MOD_ASSIGN
   67                    | OP_PLUS_ASSIGN
   68                    | OP_MINUS_ASSIGN
   69                    | OP_LEFT_ASSIGN
   70                    | OP_RIGHT_ASSIGN
   71                    | OP_AND_ASSIGN
   72                    | OP_XOR_ASSIGN
   73                    | OP_OR_ASSIGN

   74 expression: assignment_expression
   75           | expression PUN_COMMA assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers PUN_SEMIC
   78            | declaration_specifiers init_declarator_list PUN_SEMIC

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list PUN_COMMA init_declarator

   87 init_declarator: declarator
   88                | declarator PUN_EQUALS initializer

   89 storage_class_specifier: KEYW_TYPEDEF
   90                        | KEYW_EXTERN
   91                        | KEYW_STATIC
   92                        | KEYW_AUTO
   93                        | KEYW_REGISTER

   94 type_specifier: TYPE_VOID
   95               | TYPE_CHAR
   96               | TYPE_SHORT
   97               | TYPE_INT
   98               | TYPE_LONG
   99               | TYPE_FLOAT
  100               | TYPE_DOUBLE
  101               | TYPE_SIGNED
  102               | TYPE_UNSIGNED
  103               | struct_or_union_specifier
  104               | enum_specifier

  105 struct_or_union_specifier: KEYW_STRUCT IDENTIFIER PUN_CL_BRACKET struct_declaration_list PUN_CR_BRACKET
  106                          | KEYW_STRUCT PUN_CL_BRACKET struct_declaration_list PUN_CR_BRACKET
  107                          | KEYW_STRUCT IDENTIFIER

  108 struct_declaration_list: struct_declaration
  109                        | struct_declaration_list struct_declaration

  110 struct_declaration: specifier_qualifier_list struct_declarator_list PUN_SEMIC

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list
  112                         | type_specifier
  113                         | type_qualifier specifier_qualifier_list
  114                         | type_qualifier

  115 struct_declarator_list: struct_declarator
  116                       | struct_declarator_list PUN_COMMA struct_declarator

  117 struct_declarator: declarator
  118                  | PUN_COLON constant_expression
  119                  | declarator PUN_COLON constant_expression

  120 enum_specifier: KEYW_ENUM PUN_CL_BRACKET enumerator_list PUN_CR_BRACKET
  121               | KEYW_ENUM IDENTIFIER PUN_CL_BRACKET enumerator_list PUN_CR_BRACKET
  122               | KEYW_ENUM IDENTIFIER

  123 enumerator_list: enumerator
  124                | enumerator_list PUN_COMMA enumerator

  125 enumerator: enumeration_constant
  126           | enumeration_constant PUN_EQUALS constant_expression

  127 type_qualifier: KEYW_CONST
  128               | KEYW_VOLATILE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | PUN_L_BRACKET declarator PUN_R_BRACKET
  133                  | direct_declarator PUN_SL_BRACKET constant_expression PUN_SR_BRACKET
  134                  | direct_declarator PUN_SL_BRACKET PUN_SR_BRACKET
  135                  | direct_declarator PUN_L_BRACKET parameter_type_list PUN_R_BRACKET
  136                  | direct_declarator PUN_L_BRACKET identifier_list PUN_R_BRACKET
  137                  | direct_declarator PUN_L_BRACKET PUN_R_BRACKET

  138 pointer: OP_ASTERISK
  139        | OP_ASTERISK type_qualifier_list
  140        | OP_ASTERISK pointer
  141        | OP_ASTERISK type_qualifier_list pointer

  142 type_qualifier_list: type_qualifier
  143                    | type_qualifier_list type_qualifier

  144 parameter_type_list: parameter_list
  145                    | parameter_list PUN_COMMA PUN_ELLIPSIS

  146 parameter_list: parameter_declaration
  147               | parameter_list PUN_COMMA parameter_declaration

  148 parameter_declaration: declaration_specifiers declarator
  149                      | declaration_specifiers abstract_declarator
  150                      | declaration_specifiers

  151 identifier_list: IDENTIFIER
  152                | identifier_list PUN_COMMA IDENTIFIER

  153 type_name: specifier_qualifier_list
  154          | specifier_qualifier_list abstract_declarator

  155 abstract_declarator: pointer
  156                    | direct_abstract_declarator
  157                    | pointer direct_abstract_declarator

  158 direct_abstract_declarator: PUN_L_BRACKET abstract_declarator PUN_R_BRACKET
  159                           | PUN_SL_BRACKET PUN_SR_BRACKET
  160                           | PUN_SL_BRACKET constant_expression PUN_SR_BRACKET
  161                           | direct_abstract_declarator PUN_SL_BRACKET PUN_SR_BRACKET
  162                           | direct_abstract_declarator PUN_SL_BRACKET constant_expression PUN_SR_BRACKET
  163                           | PUN_L_BRACKET PUN_R_BRACKET
  164                           | PUN_L_BRACKET parameter_type_list PUN_R_BRACKET
  165                           | direct_abstract_declarator PUN_L_BRACKET PUN_R_BRACKET
  166                           | direct_abstract_declarator PUN_L_BRACKET parameter_type_list PUN_R_BRACKET

  167 initializer: assignment_expression
  168            | PUN_CL_BRACKET initializer_list PUN_CR_BRACKET
  169            | PUN_CL_BRACKET initializer_list PUN_COMMA PUN_CR_BRACKET

  170 initializer_list: initializer
  171                 | initializer_list PUN_COMMA initializer

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: IDENTIFIER PUN_COLON statement
  179                  | KEYW_CASE constant_expression PUN_COLON statement
  180                  | KEYW_DEFAULT PUN_COLON statement

  181 compound_statement: PUN_CL_BRACKET PUN_CR_BRACKET
  182                   | PUN_CL_BRACKET statement_list PUN_CR_BRACKET
  183                   | PUN_CL_BRACKET declaration_list PUN_CR_BRACKET
  184                   | PUN_CL_BRACKET declaration_list statement_list PUN_CR_BRACKET

  185 declaration_list: declaration
  186                 | declaration_list declaration

  187 statement_list: statement
  188               | statement_list statement

  189 expression_statement: PUN_SEMIC
  190                     | expression PUN_SEMIC

  191 selection_statement: KEYW_IF PUN_L_BRACKET expression PUN_R_BRACKET statement
  192                    | KEYW_IF PUN_L_BRACKET expression PUN_R_BRACKET statement KEYW_ELSE statement
  193                    | KEYW_SWITCH PUN_L_BRACKET expression PUN_R_BRACKET statement

  194 iteration_statement: KEYW_WHILE PUN_L_BRACKET expression PUN_R_BRACKET statement
  195                    | KEYW_DO statement KEYW_WHILE PUN_L_BRACKET expression PUN_R_BRACKET PUN_SEMIC
  196                    | KEYW_FOR PUN_L_BRACKET expression_statement expression_statement PUN_R_BRACKET statement
  197                    | KEYW_FOR PUN_L_BRACKET expression_statement expression_statement expression PUN_R_BRACKET statement

  198 jump_statement: KEYW_CONTINUE PUN_SEMIC
  199               | KEYW_BREAK PUN_SEMIC
  200               | KEYW_RETURN PUN_SEMIC
  201               | KEYW_RETURN expression PUN_SEMIC

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list compound_statement
  207                    | declaration_specifiers declarator compound_statement
  208                    | declarator declaration_list compound_statement
  209                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'<' (60) 42
'>' (62) 43
error (256)
KEYW_AUTO (258) 92
KEYW_BREAK (259) 199
KEYW_CASE (260) 179
KEYW_CONST (261) 127
KEYW_CONTINUE (262) 198
KEYW_DEFAULT (263) 180
KEYW_DO (264) 195
KEYW_ELSE (265) 192
KEYW_ENUM (266) 120 121 122
KEYW_EXTERN (267) 90
KEYW_FOR (268) 196 197
KEYW_IF (269) 191 192
KEYW_REGISTER (270) 93
KEYW_RETURN (271) 200 201
KEYW_SIZEOF (272) 21 22
KEYW_STATIC (273) 91
KEYW_STRUCT (274) 105 106 107
KEYW_SWITCH (275) 193
KEYW_TYPEDEF (276) 89
KEYW_VOLATILE (277) 128
KEYW_WHILE (278) 194 195
TYPE_CHAR (279) 95
TYPE_DOUBLE (280) 100
TYPE_FLOAT (281) 99
TYPE_INT (282) 97
TYPE_LONG (283) 98
TYPE_SHORT (284) 96
TYPE_SIGNED (285) 101
TYPE_UNSIGNED (286) 102
TYPE_VOID (287) 94
IDENTIFIER (288) 2 3 11 12 105 107 121 122 131 151 152 178
T_NUMBER (289)
CONSTANT (290) 4
STRING_LITERAL (291) 5
OP_ASTERISK (292) 24 32 138 139 140 141
OP_DIV (293) 33
OP_REMAINDER (294) 34
OP_PLUS (295) 25 36
OP_MINUS (296) 26 37
OP_EXP (297) 52
OP_ANDAND (298) 56
OP_OROR (299) 58
OP_AND (300) 23 50
OP_OR (301) 54
OP_EQ_CONST (302) 47
OP_NE_CONST (303) 48
OP_LT_EQ (304) 44
OP_GT_EQ (305) 45
OP_LT (306)
OP_GT (307)
OP_CONDITIONAL (308) 60
OP_RIGHT_SHIFT (309) 40
OP_LEFT_SHIFT (310) 39
OP_INCREM (311) 13 18
OP_DECREM (312) 14 19
OP_POINTER (313) 12
OP_MUL_ASSIGN (314) 64
OP_DIV_ASSIGN (315) 65
OP_PLUS_ASSIGN (316) 67
OP_MOD_ASSIGN (317) 66
OP_MINUS_ASSIGN (318) 68
OP_LEFT_ASSIGN (319) 69
OP_RIGHT_ASSIGN (320) 70
OP_AND_ASSIGN (321) 71
OP_XOR_ASSIGN (322) 72
OP_OR_ASSIGN (323) 73
OP_NOT (324) 28
OP_DOT (325) 11
OP_DESTRUCTOR (326) 27
PUN_L_BRACKET (327) 6 9 10 22 30 132 135 136 137 158 163 164 165 166
    191 192 193 194 195 196 197
PUN_R_BRACKET (328) 6 9 10 22 30 132 135 136 137 158 163 164 165 166
    191 192 193 194 195 196 197
PUN_CL_BRACKET (329) 105 106 120 121 168 169 181 182 183 184
PUN_CR_BRACKET (330) 105 106 120 121 168 169 181 182 183 184
PUN_SL_BRACKET (331) 8 133 134 159 160 161 162
PUN_SR_BRACKET (332) 8 133 134 159 160 161 162
PUN_SEMIC (333) 77 78 110 189 190 195 198 199 200 201
PUN_COMMA (334) 16 75 86 116 124 145 147 152 169 171
PUN_COLON (335) 60 118 119 178 179 180
PUN_EQUALS (336) 63 88 126
PUN_ELLIPSIS (337) 145
HASHTAG (338)
DOUBLE_HASHTAG (339)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
root (88)
    on left: 1, on right: 0
enumeration_constant (89)
    on left: 2, on right: 125 126
primary_expression (90)
    on left: 3 4 5 6, on right: 7
postfix_expression (91)
    on left: 7 8 9 10 11 12 13 14, on right: 8 9 10 11 12 13 14 17
argument_expression_list (92)
    on left: 15 16, on right: 10 16
unary_expression (93)
    on left: 17 18 19 20 21 22, on right: 18 19 21 29 62
unary_operator (94)
    on left: 23 24 25 26 27 28, on right: 20
cast_expression (95)
    on left: 29 30, on right: 20 30 31 32 33 34
multiplicative_expression (96)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
additive_expression (97)
    on left: 35 36 37, on right: 36 37 38 39 40
shift_expression (98)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
relational_expression (99)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
equality_expression (100)
    on left: 46 47 48, on right: 47 48 49 50
and_expression (101)
    on left: 49 50, on right: 50 51 52
exclusive_or_expression (102)
    on left: 51 52, on right: 52 53 54
inclusive_or_expression (103)
    on left: 53 54, on right: 54 55 56
logical_and_expression (104)
    on left: 55 56, on right: 56 57 58
logical_or_expression (105)
    on left: 57 58, on right: 58 59 60
conditional_expression (106)
    on left: 59 60, on right: 60 61 76
assignment_expression (107)
    on left: 61 62, on right: 15 16 62 74 75 167
assignment_operator (108)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
expression (109)
    on left: 74 75, on right: 6 8 60 75 190 191 192 193 194 195 197
    201
constant_expression (110)
    on left: 76, on right: 118 119 126 133 160 162 179
declaration (111)
    on left: 77 78, on right: 185 186 205
declaration_specifiers (112)
    on left: 79 80 81 82 83 84, on right: 77 78 80 82 84 148 149 150
    206 207
init_declarator_list (113)
    on left: 85 86, on right: 78 86
init_declarator (114)
    on left: 87 88, on right: 85 86
storage_class_specifier (115)
    on left: 89 90 91 92 93, on right: 79 80
type_specifier (116)
    on left: 94 95 96 97 98 99 100 101 102 103 104, on right: 81 82
    111 112
struct_or_union_specifier (117)
    on left: 105 106 107, on right: 103
struct_declaration_list (118)
    on left: 108 109, on right: 105 106 109
struct_declaration (119)
    on left: 110, on right: 108 109
specifier_qualifier_list (120)
    on left: 111 112 113 114, on right: 110 111 113 153 154
struct_declarator_list (121)
    on left: 115 116, on right: 110 116
struct_declarator (122)
    on left: 117 118 119, on right: 115 116
enum_specifier (123)
    on left: 120 121 122, on right: 104
enumerator_list (124)
    on left: 123 124, on right: 120 121 124
enumerator (125)
    on left: 125 126, on right: 123 124
type_qualifier (126)
    on left: 127 128, on right: 83 84 113 114 142 143
declarator (127)
    on left: 129 130, on right: 87 88 117 119 132 148 206 207 208 209
direct_declarator (128)
    on left: 131 132 133 134 135 136 137, on right: 129 130 133 134
    135 136 137
pointer (129)
    on left: 138 139 140 141, on right: 129 140 141 155 157
type_qualifier_list (130)
    on left: 142 143, on right: 139 141 143
parameter_type_list (131)
    on left: 144 145, on right: 135 164 166
parameter_list (132)
    on left: 146 147, on right: 144 145 147
parameter_declaration (133)
    on left: 148 149 150, on right: 146 147
identifier_list (134)
    on left: 151 152, on right: 136 152
type_name (135)
    on left: 153 154, on right: 22 30
abstract_declarator (136)
    on left: 155 156 157, on right: 149 154 158
direct_abstract_declarator (137)
    on left: 158 159 160 161 162 163 164 165 166, on right: 156 157
    161 162 165 166
initializer (138)
    on left: 167 168 169, on right: 88 170 171
initializer_list (139)
    on left: 170 171, on right: 168 169 171
statement (140)
    on left: 172 173 174 175 176 177, on right: 178 179 180 187 188
    191 192 193 194 195 196 197
labeled_statement (141)
    on left: 178 179 180, on right: 172
compound_statement (142)
    on left: 181 182 183 184, on right: 173 206 207 208 209
declaration_list (143)
    on left: 185 186, on right: 183 184 186 206 208
statement_list (144)
    on left: 187 188, on right: 182 184 188
expression_statement (145)
    on left: 189 190, on right: 174 196 197
selection_statement (146)
    on left: 191 192 193, on right: 175
iteration_statement (147)
    on left: 194 195 196 197, on right: 176
jump_statement (148)
    on left: 198 199 200 201, on right: 177
translation_unit (149)
    on left: 202 203, on right: 1 203
external_declaration (150)
    on left: 204 205, on right: 202 203
function_definition (151)
    on left: 206 207 208 209, on right: 204


State 0

    0 $accept: . root $end

    KEYW_AUTO      shift, and go to state 1
    KEYW_CONST     shift, and go to state 2
    KEYW_ENUM      shift, and go to state 3
    KEYW_EXTERN    shift, and go to state 4
    KEYW_REGISTER  shift, and go to state 5
    KEYW_STATIC    shift, and go to state 6
    KEYW_STRUCT    shift, and go to state 7
    KEYW_TYPEDEF   shift, and go to state 8
    KEYW_VOLATILE  shift, and go to state 9
    TYPE_CHAR      shift, and go to state 10
    TYPE_DOUBLE    shift, and go to state 11
    TYPE_FLOAT     shift, and go to state 12
    TYPE_INT       shift, and go to state 13
    TYPE_LONG      shift, and go to state 14
    TYPE_SHORT     shift, and go to state 15
    TYPE_SIGNED    shift, and go to state 16
    TYPE_UNSIGNED  shift, and go to state 17
    TYPE_VOID      shift, and go to state 18
    IDENTIFIER     shift, and go to state 19
    OP_ASTERISK    shift, and go to state 20
    PUN_L_BRACKET  shift, and go to state 21

    root                       go to state 22
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    declarator                 go to state 30
    direct_declarator          go to state 31
    pointer                    go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

   92 storage_class_specifier: KEYW_AUTO .

    $default  reduce using rule 92 (storage_class_specifier)


State 2

  127 type_qualifier: KEYW_CONST .

    $default  reduce using rule 127 (type_qualifier)


State 3

  120 enum_specifier: KEYW_ENUM . PUN_CL_BRACKET enumerator_list PUN_CR_BRACKET
  121               | KEYW_ENUM . IDENTIFIER PUN_CL_BRACKET enumerator_list PUN_CR_BRACKET
  122               | KEYW_ENUM . IDENTIFIER

    IDENTIFIER      shift, and go to state 36
    PUN_CL_BRACKET  shift, and go to state 37


State 4

   90 storage_class_specifier: KEYW_EXTERN .

    $default  reduce using rule 90 (storage_class_specifier)


State 5

   93 storage_class_specifier: KEYW_REGISTER .

    $default  reduce using rule 93 (storage_class_specifier)


State 6

   91 storage_class_specifier: KEYW_STATIC .

    $default  reduce using rule 91 (storage_class_specifier)


State 7

  105 struct_or_union_specifier: KEYW_STRUCT . IDENTIFIER PUN_CL_BRACKET struct_declaration_list PUN_CR_BRACKET
  106                          | KEYW_STRUCT . PUN_CL_BRACKET struct_declaration_list PUN_CR_BRACKET
  107                          | KEYW_STRUCT . IDENTIFIER

    IDENTIFIER      shift, and go to state 38
    PUN_CL_BRACKET  shift, and go to state 39


State 8

   89 storage_class_specifier: KEYW_TYPEDEF .

    $default  reduce using rule 89 (storage_class_specifier)


State 9

  128 type_qualifier: KEYW_VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 10

   95 type_specifier: TYPE_CHAR .

    $default  reduce using rule 95 (type_specifier)


State 11

  100 type_specifier: TYPE_DOUBLE .

    $default  reduce using rule 100 (type_specifier)


State 12

   99 type_specifier: TYPE_FLOAT .

    $default  reduce using rule 99 (type_specifier)


State 13

   97 type_specifier: TYPE_INT .

    $default  reduce using rule 97 (type_specifier)


State 14

   98 type_specifier: TYPE_LONG .

    $default  reduce using rule 98 (type_specifier)


State 15

   96 type_specifier: TYPE_SHORT .

    $default  reduce using rule 96 (type_specifier)


State 16

  101 type_specifier: TYPE_SIGNED .

    $default  reduce using rule 101 (type_specifier)


State 17

  102 type_specifier: TYPE_UNSIGNED .

    $default  reduce using rule 102 (type_specifier)


State 18

   94 type_specifier: TYPE_VOID .

    $default  reduce using rule 94 (type_specifier)


State 19

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 20

  138 pointer: OP_ASTERISK .
  139        | OP_ASTERISK . type_qualifier_list
  140        | OP_ASTERISK . pointer
  141        | OP_ASTERISK . type_qualifier_list pointer

    KEYW_CONST     shift, and go to state 2
    KEYW_VOLATILE  shift, and go to state 9
    OP_ASTERISK    shift, and go to state 20

    $default  reduce using rule 138 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 21

  132 direct_declarator: PUN_L_BRACKET . declarator PUN_R_BRACKET

    IDENTIFIER     shift, and go to state 19
    OP_ASTERISK    shift, and go to state 20
    PUN_L_BRACKET  shift, and go to state 21

    declarator         go to state 43
    direct_declarator  go to state 31
    pointer            go to state 32


State 22

    0 $accept: root . $end

    $end  shift, and go to state 44


State 23

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 24

   77 declaration: declaration_specifiers . PUN_SEMIC
   78            | declaration_specifiers . init_declarator_list PUN_SEMIC
  206 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  207                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER     shift, and go to state 19
    OP_ASTERISK    shift, and go to state 20
    PUN_L_BRACKET  shift, and go to state 21
    PUN_SEMIC      shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 31
    pointer               go to state 32


State 25

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    KEYW_AUTO      shift, and go to state 1
    KEYW_CONST     shift, and go to state 2
    KEYW_ENUM      shift, and go to state 3
    KEYW_EXTERN    shift, and go to state 4
    KEYW_REGISTER  shift, and go to state 5
    KEYW_STATIC    shift, and go to state 6
    KEYW_STRUCT    shift, and go to state 7
    KEYW_TYPEDEF   shift, and go to state 8
    KEYW_VOLATILE  shift, and go to state 9
    TYPE_CHAR      shift, and go to state 10
    TYPE_DOUBLE    shift, and go to state 11
    TYPE_FLOAT     shift, and go to state 12
    TYPE_INT       shift, and go to state 13
    TYPE_LONG      shift, and go to state 14
    TYPE_SHORT     shift, and go to state 15
    TYPE_SIGNED    shift, and go to state 16
    TYPE_UNSIGNED  shift, and go to state 17
    TYPE_VOID      shift, and go to state 18

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29


State 26

   81 declaration_specifiers: type_specifier .
   82                       | type_specifier . declaration_specifiers

    KEYW_AUTO      shift, and go to state 1
    KEYW_CONST     shift, and go to state 2
    KEYW_ENUM      shift, and go to state 3
    KEYW_EXTERN    shift, and go to state 4
    KEYW_REGISTER  shift, and go to state 5
    KEYW_STATIC    shift, and go to state 6
    KEYW_STRUCT    shift, and go to state 7
    KEYW_TYPEDEF   shift, and go to state 8
    KEYW_VOLATILE  shift, and go to state 9
    TYPE_CHAR      shift, and go to state 10
    TYPE_DOUBLE    shift, and go to state 11
    TYPE_FLOAT     shift, and go to state 12
    TYPE_INT       shift, and go to state 13
    TYPE_LONG      shift, and go to state 14
    TYPE_SHORT     shift, and go to state 15
    TYPE_SIGNED    shift, and go to state 16
    TYPE_UNSIGNED  shift, and go to state 17
    TYPE_VOID      shift, and go to state 18

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29


State 27

  103 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 103 (type_specifier)


State 28

  104 type_specifier: enum_specifier .

    $default  reduce using rule 104 (type_specifier)


State 29

   83 declaration_specifiers: type_qualifier .
   84                       | type_qualifier . declaration_specifiers

    KEYW_AUTO      shift, and go to state 1
    KEYW_CONST     shift, and go to state 2
    KEYW_ENUM      shift, and go to state 3
    KEYW_EXTERN    shift, and go to state 4
    KEYW_REGISTER  shift, and go to state 5
    KEYW_STATIC    shift, and go to state 6
    KEYW_STRUCT    shift, and go to state 7
    KEYW_TYPEDEF   shift, and go to state 8
    KEYW_VOLATILE  shift, and go to state 9
    TYPE_CHAR      shift, and go to state 10
    TYPE_DOUBLE    shift, and go to state 11
    TYPE_FLOAT     shift, and go to state 12
    TYPE_INT       shift, and go to state 13
    TYPE_LONG      shift, and go to state 14
    TYPE_SHORT     shift, and go to state 15
    TYPE_SIGNED    shift, and go to state 16
    TYPE_UNSIGNED  shift, and go to state 17
    TYPE_VOID      shift, and go to state 18

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29


State 30

  208 function_definition: declarator . declaration_list compound_statement
  209                    | declarator . compound_statement

    KEYW_AUTO       shift, and go to state 1
    KEYW_CONST      shift, and go to state 2
    KEYW_ENUM       shift, and go to state 3
    KEYW_EXTERN     shift, and go to state 4
    KEYW_REGISTER   shift, and go to state 5
    KEYW_STATIC     shift, and go to state 6
    KEYW_STRUCT     shift, and go to state 7
    KEYW_TYPEDEF    shift, and go to state 8
    KEYW_VOLATILE   shift, and go to state 9
    TYPE_CHAR       shift, and go to state 10
    TYPE_DOUBLE     shift, and go to state 11
    TYPE_FLOAT      shift, and go to state 12
    TYPE_INT        shift, and go to state 13
    TYPE_LONG       shift, and go to state 14
    TYPE_SHORT      shift, and go to state 15
    TYPE_SIGNED     shift, and go to state 16
    TYPE_UNSIGNED   shift, and go to state 17
    TYPE_VOID       shift, and go to state 18
    PUN_CL_BRACKET  shift, and go to state 52

    declaration                go to state 53
    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    compound_statement         go to state 55
    declaration_list           go to state 56


State 31

  130 declarator: direct_declarator .
  133 direct_declarator: direct_declarator . PUN_SL_BRACKET constant_expression PUN_SR_BRACKET
  134                  | direct_declarator . PUN_SL_BRACKET PUN_SR_BRACKET
  135                  | direct_declarator . PUN_L_BRACKET parameter_type_list PUN_R_BRACKET
  136                  | direct_declarator . PUN_L_BRACKET identifier_list PUN_R_BRACKET
  137                  | direct_declarator . PUN_L_BRACKET PUN_R_BRACKET

    PUN_L_BRACKET   shift, and go to state 57
    PUN_SL_BRACKET  shift, and go to state 58

    $default  reduce using rule 130 (declarator)


State 32

  129 declarator: pointer . direct_declarator

    IDENTIFIER     shift, and go to state 19
    PUN_L_BRACKET  shift, and go to state 21

    direct_declarator  go to state 59


State 33

    1 root: translation_unit .
  203 translation_unit: translation_unit . external_declaration

    KEYW_AUTO      shift, and go to state 1
    KEYW_CONST     shift, and go to state 2
    KEYW_ENUM      shift, and go to state 3
    KEYW_EXTERN    shift, and go to state 4
    KEYW_REGISTER  shift, and go to state 5
    KEYW_STATIC    shift, and go to state 6
    KEYW_STRUCT    shift, and go to state 7
    KEYW_TYPEDEF   shift, and go to state 8
    KEYW_VOLATILE  shift, and go to state 9
    TYPE_CHAR      shift, and go to state 10
    TYPE_DOUBLE    shift, and go to state 11
    TYPE_FLOAT     shift, and go to state 12
    TYPE_INT       shift, and go to state 13
    TYPE_LONG      shift, and go to state 14
    TYPE_SHORT     shift, and go to state 15
    TYPE_SIGNED    shift, and go to state 16
    TYPE_UNSIGNED  shift, and go to state 17
    TYPE_VOID      shift, and go to state 18
    IDENTIFIER     shift, and go to state 19
    OP_ASTERISK    shift, and go to state 20
    PUN_L_BRACKET  shift, and go to state 21

    $default  reduce using rule 1 (root)

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    enum_specifier             go to state 28
    type_qualifier             go to state 29
    declarator                 go to state 30
    direct_declarator          go to state 31
    pointer                    go to state 32
    external_declaration       go to state 60
    function_definition        go to state 35


State 34

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 35

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 36

  121 enum_specifier: KEYW_ENUM IDENTIFIER . PUN_CL_BRACKET enumerator_list PUN_CR_BRACKET
  122               | KEYW_ENUM IDENTIFIER .

    PUN_CL_BRACKET  shift, and go to state 61
